; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/jeremy-dev/extr_keymap.c_press_two_keys.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/jeremy-dev/extr_keymap.c_press_two_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @press_two_keys(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @register_code(i32 %5)
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @register_code(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @unregister_code(i32 %9)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @unregister_code(i32 %11)
  ret void
}

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
